--- a/Application/app/build.gradle
+++ b/Application/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     //tab레이아웃 추가하면서 생김
     implementation files('libs/droidQuery-1.1.0-sources.jar')
+    implementation 'com.android.support:support-v4:28.0.0'
 }
