--- a/Application/app/src/main/AndroidManifest.xml
+++ b/Application/app/src/main/AndroidManifest.xml
@@ -27,4 +27,5 @@
         <activity android:name=".Popup.SettingPopup" android:theme="@android:style/Theme.Dialog"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 </manifest>
