--- a/Server/package.json
+++ b/Server/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "mysql": "^2.16.0",
+    "python-shell": "^1.0.7",
     "supervisor": "^0.12.0"
   },
   "description": "wp",
