--- a/Application/app/build.gradle
+++ b/Application/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.example.capstone"
         minSdkVersion 24
-        targetSdkVersion 26
+        targetSdkVersion 27
         multiDexEnabled true
         versionCode 1
         versionName "1.0"
@@ -34,16 +34,17 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:26.0.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:27.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.android.support:design:26.0.0'
+    implementation 'com.android.support:design:27.0.0'
     //tab레이아웃 추가하면서 생김
     implementation files('libs/droidQuery-1.1.0-sources.jar')
 
-    implementation 'com.android.support:support-v4:26.0.0'
+    implementation 'com.android.support:support-v4:27.0.0'
     implementation files('libs/httpclient-4.2.3.jar')
     implementation files('libs/apache-httpcomponents-httpcore.jar')
     implementation files('libs/commons-logging-1.2.1.1.jar')
